--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <br>
             <h1>Bulbasaur</h1>
             <br>
-            Bulbasaur is a small,quadruped pokemon that has blue-green screen with darker green patches.
-            It has red eyes with white pupils and scler's.It also has pointed.
+            <p>Bulbasaur is a small,quadruped pokemon that has blue-green screen with darker green patches.
+            It has red eyes with white pupils and scler's.It also has pointed.</p>
         </div>
 <img class="img1" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" title="Bulbasaur" width="1000" height="1000">
 </div>
@@ -24,8 +24,8 @@
                     <br>
                     <h1>Charmander</h1>
                     <br>
-                    Charmander is a small,bipedal-lizard like pokemon native to kanto.They have blue-eyes,red-orange screen,three-clawed toes,
-                    yellow-bellies and yellow-soles under their feet.
+                    <p>Charmander is a small,bipedal-lizard like pokemon native to kanto.They have blue-eyes,red-orange screen,three-clawed toes,
+                    yellow-bellies and yellow-soles under their feet.</p>
                 </div>
 <img class="img2" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png" title="Squirtle" >
 </div>
@@ -36,9 +36,9 @@
                 <br>
                 <h1>Squirtle</h1>
                 <br>
-                Squirtle is a small Pokemon that resembles a light blue turtle.
+                <p>Squirtle is a small Pokemon that resembles a light blue turtle.
                  While it typically walks on its two short legs, it has been shown to run 
-                 on all fours in Super Smash Bros, Brawl. 
+                 on all fours in Super Smash Bros, Brawl. </p>
             </div>
 <img class="img3" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png" title="Squirtle" width="1000" height="1000">
  </div>
